# anti-collision

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
.qwen/: settings.json
docs/: PROGRAM_EXPLANATION_RU.md
src/: core.rs  main.rs
